# musubi-tuner-ui

./: .dockerignore  .gitignore  0-claude-set-context-assumptions.md  1-claude-codebase-audit-python-react.md  2-claude-openapi.md  CLAUDE.md  Dockerfile  README.md  musubi-tuner-ui-Audit.md  musubi-tuner-ui-OpenAPI.yaml  musubi-tuner-ui-Scorecard.md
.github/workflows/: docker.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  logging_config.py  main.py  models.py  schemas.py
backend/app/presets/: rtx3090_high_noise.json  rtx3090_interleaved.json  rtx3090_low_noise.json
backend/app/routers/: configs.py  datasets.py  jobs.py  system.py
backend/app/services/: gpu_monitor.py  job_runner.py  log_streamer.py  progress.py  tb_reader.py
backend/tests/: conftest.py  test_configs.py  test_datasets.py  test_health.py  test_job_runner.py  test_jobs.py  test_progress.py  test_system.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/config/: ConfigPage.tsx  DatasetTomlForm.test.tsx  DatasetTomlForm.tsx  SampleConfigForm.tsx  TrainingArgsForm.test.tsx  TrainingArgsForm.tsx
frontend/src/components/dashboard/: ActiveJobCard.test.tsx  ActiveJobCard.tsx  DashboardPage.test.tsx  DashboardPage.tsx  GpuWidget.test.tsx  (+1 more)
frontend/src/hooks/: useGpuStatus.test.ts  useGpuStatus.ts  useJobs.test.ts  useJobs.ts  useSSE.test.ts  useSSE.ts
frontend/src/test/: factories.ts  render.tsx
frontend/src/utils/: date.test.ts  date.ts
(+36 files in other folders)
